styles/stylesheet/global.css
:root {
  --z-index-menu: 20;
  --z-index-modal: 30;
  --z-index-interpreter: 40;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  height: 100vh;
  background-color: var(--clr-background);
  background-image: var(--bg-image, url('assets/base/background.webp'));
  background-repeat: repeat;
  background-position: center;
  background-size: cover;
  font-size: var(--fs-200);
  font-family: 'BlenderPro', sans-serif;
  color: var(--clr-text-main);
}


#root {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  height: 100vh;
  overflow-y: auto;
  scrollbar-gutter: stable;
}


/* Elements */
@supports (height: 100svh) {

  body {
    height: 100svh;
  }

  #root {
    height: 100svh;
  }
}

:where(body, h1, h2, h3, h4, p, figure, blockquote, dl, dd) {
  margin: 0;
}

:is(h2, h3, h4, h5, h6) {
  font-size: var(--fs-200);
}

ul[role='list'],
ul[role='tablist'] {
  list-style: none;
}

ul[role='tablist'] {
  padding-inline-start: 0;
}

button[aria-label="Comprobar"]+button[aria-label="Reintentar"] {
  margin-inline-start: 1rem;
}

ul li::marker {
  color: var(--primary);
}

::-webkit-scrollbar {
  width: .625rem;
  border-radius: .625rem;
  background-color: var(--secondary-100);
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: var(--primary);
  border: .125rem solid var(--secondary-100);
  border-radius: .4375rem;
}

/* Utilities */
.wrapper {
  margin-inline: auto;
  width: min(100% - 1rem, 180ch);
}

:is(.u-validation-success, .u-validation-wrong) {
  position: relative;
}

.u-validation-success::after,
.u-validation-wrong::after {
  place-content: center;
  aspect-ratio: 1 / 1;
  box-shadow: 1px 1px 3px 0 #60606057;
  display: grid;
  position: absolute;
  z-index: 2;
  top: 0;
  right: 0;
  transform: translate(50%, -50%);
  width: 1.6rem;
  background-color: var(--white);
  border-radius: 50%;
  font-style: normal;
}

.u-validation-success::after {
  content: '✔';
  color: var(--success);
}

.u-validation-wrong::after {
  content: '✖';
  color: var(--wrong);
}

html[data-dark-mode="true"] .u-validation-success::after,
html[data-dark-mode="true"] .u-validation-wrong::after{
  background-color: var(--clr-background);
}

.u-do-flip {
  -o-transform: rotateY(-180deg);
  -webkit-transform: rotateY(-180deg);
  -ms-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
}

html[data-dark-mode="true"] .u-white-bg {
  background-color: #fefefe;
}

/* Elements */
.c-audio__bar {
  --audio-background-color: var(--secondary-200);
  --audio-icon-color: var(--secondary-700);
  --audio-border-radius: 2rem;
  font-size: var(--fs-300);
  padding: 0.2rem 0.4rem;
}

.c-audio__bar svg {
  --icon-size: 1.5rem;
}

.c-audio__button {
  --outline-color: #11203c;
  --button-border-color: transparent;
  --button-bg-color: #11203c;
  --audio-btn-background-hover: #1e3a6e;
  box-shadow: 1px 2px 2px 1px #60606057;
}

.c-audio__bar[data-a11y="true"] {
  margin-block: min(1rem, 1vh);
}

.c-interpreter__container {
  --interpreter-clr-list: var(--clr-brand);
  --interpreter-btn-bg: var(--clr-brand);
  z-index: var(--z-index-interpreter);
}

.c-image__figcaption {
  font-style: italic;
}

.video-player {
  --video-color: #cacaca;
  --video-bg: #1a1f2a;
  --video-caption-bg: #1a1f2a;
  --video-slider-bg: var(--clr-accent-light);
  --video-track-bg: #cacaca;
  --video-transcription-border-color: #323235;
  --video-transcription-badge: #1daf9a;
  --video-transcription-cue-hover: #19578d;
  --video-transcription-cue-active: #39393c;
  --video-transcription-color: var(--clr-text-main);
}

.video-player__transcription-header>p {
  font-weight: bold;
  font-size: var(--fs-300);
}

@media screen and (max-width: 960px) {
  .video-player__button {
    aspect-ratio: 0;
  }

  .video-player__button>svg {
    --icon-size: 1.2rem;
  }
}

